Improvements from Java 11 API have been incorporated into the code.